--- a/src/libexecwrapper-0.1/Makefile
+++ b/src/libexecwrapper-0.1/Makefile
@@ -16,7 +16,7 @@ COMMON_DEFS = -DWITH_ERRLIST            \
 	-DUSE_DL_PREFIX \
 	-DPOSIX_MISTAKE
  
-DEFS=
+DEFS=-DOLD_HANDLES=1
 #DEFS=-DDEBUG=1 
 #DEFS=-DDEBUG=1 -DTESTING=1 -DSLEEPING=1
 #DEFS=-DTESTING=1
