LibExecWrapper: fixed chmod (can handled when EPERM returns).

--- a/src/libexecwrapper-0.1/Makefile
+++ b/src/libexecwrapper-0.1/Makefile
@@ -20,6 +20,7 @@ COMMON_DEFS = -DWITH_ERRLIST            \
 #DEFS=-DDEBUG=1 
 #DEFS=-DDEBUG=1 -DTESTING=1 -DSLEEPING=1
 #DEFS=-DTESTING=1
+#DEFS=-DPROD_DEBUG=1
 DEFS=
 
 LIBEW = libexecwrapper.so
