NativeBOINC: added new option in Local prefs (xfer when wifi). Added new option in Manage client screen: proxy settings.

--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -212,6 +212,11 @@
 			android:launchMode="singleTop"
 			android:theme="@style/Theme.NativeBoincActivity" />
 		
+		<activity android:name=".ProxySettingsActivity"
+		    android:label="@string/proxySettings"
+		    android:launchMode="singleTop"
+		    android:theme="@style/Theme.NativeBoincActivity" />
+		
 		<activity android:name=".TimePreferencesActivity"
 			android:launchMode="singleTop"
 			android:theme="@style/Theme.NativeBoincActivity" />
