--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -39,6 +39,8 @@
 				android:description="@string/install_service_desc" />
 		<service android:name=".nativeclient.NativeBoincService"
 				android:description="@string/nboinc_service_desc" />
+		<service android:name=".bugcatcher.BugCatcherService"
+				android:description="@string/bugcatcher_service_desc" />
 		
 		<receiver android:name=".news.NewsReceiver" android:label="@string/newsHandlerDesc">
 		    <intent-filter>
@@ -105,6 +107,11 @@
 		
 		<activity android:name=".BoincLogsActivity"
 			android:label="@string/nativeBoincLogs"
+			android:launchMode="singleTop"
+			android:theme="@style/Theme.NativeBoincActivity" />
+		
+		<activity android:name=".BugCatcherActivity"
+			android:label="@string/bugCatcher"
 			android:launchMode="singleTop"
 			android:theme="@style/Theme.NativeBoincActivity" />
 		
