--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -39,7 +39,7 @@
 				android:description="@string/install_service_desc" />
 		<service android:name=".nativeclient.NativeBoincService"
 				android:description="@string/nboinc_service_desc" />
-		<service android:name=".bugcatcher.BugCatcherService"
+		<service android:name=".bugcatch.BugCatcherService"
 				android:description="@string/bugcatcher_service_desc" />
 		
 		<receiver android:name=".news.NewsReceiver" android:label="@string/newsHandlerDesc">
