--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -248,6 +248,10 @@
 			android:label="@string/configFile"
 			android:launchMode="singleTop"
 			android:theme="@style/Theme.NativeBoincActivity" />
+		
+		<activity android:name=".BugCatchErrorActivity"
+			android:launchMode="singleInstance"
+			android:theme="@style/StandaloneDialog" />
 	</application>
     
 </manifest>
