--- a/src/setiathome-6.12/seti_boinc/sah_config.h.in
+++ b/src/setiathome-6.12/seti_boinc/sah_config.h.in
@@ -160,6 +160,9 @@
 /* Define to 1 if you have the ffts library */
 #undef HAVE_LIBFFTS
 
+/* Define to 1 if you have the ffts_vfp_p library */
+#undef HAVE_LIBFFTS_VFP_P
+
 /* Define to 1 if you have the math library */
 #undef HAVE_LIBM
 
@@ -599,6 +602,10 @@
 
 #if defined(HAVE_LIBFFTS)
 #define USE_FFTS
+#endif
+
+#if defined(HAVE_LIBFFTS_VFP_P)
+#define USE_FFTS_VFP_P
 #endif
 
 #if defined(USE_INFORMIX) && defined(USE_MYSQL) && defined(HAVE_NAMESPACES)
